--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ timm==0.9.16
 rotary-embedding-torch==0.5.3
 diffusers==0.33.1
 transformers==4.39.3
-accelerate==1.6.0
+accelerate
+wandb
+tensorboard
 opencv-python==4.10.0.84
 scipy
