--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-mmengine>=0.10.3 -i https://pypi.org/simple/
-timm==0.9.16
-rotary-embedding-torch==0.5.3
+# Core torch first (CUDA/flash deps)
+torch==2.1.0+cu121
+torchvision==0.16.0+cu121
 diffusers==0.33.1
 transformers==4.39.3
-accelerate
-wandb
-tensorboard
-flash-attn
-torch
-tqdm
-einops
-rotary_embedding_torch
-timm
-transformers
+accelerate==1.6.0
+
+# Then flash-attn (now links to torch)
+flash-attn==2.5.6
+
+# Rest as-is
+mmengine>=0.10.3
+timm==0.9.16
+rotary-embedding-torch==0.5.3
+opencv-python==4.10.0.84
 safetensors
 pillow
-opencv-python==4.10.0.84
-scipy
+tqdm
+einops
